--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -43,3 +43,24 @@ button:hover {
 #loginForm {
     display: none;
 }
+
+/* styles.css */
+
+/* styles.css */
+
+#logoutContainer {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    z-index: 999; /* Ensure it's above other elements */
+}
+
+#logoutButton {
+    padding: 10px 20px; /* Increase padding for a bigger button */
+    background-color: #ff0000; /* Red background color */
+    border: 1px solid #cc0000; /* Slightly darker red border color */
+    cursor: pointer;
+    color: #fff; /* White text color */
+}
+
+
